# cpp-homework

./: .gitignore  README.md
task3/: CMakeLists.txt
task3/results/: SquareSum.txt  TransposeMultiply.txt
task3/src/: CMakeLists.txt  map_reduce.cpp  map_reduce.h  operations.cpp  operations.h
task3/tests/: CMakeLists.txt  test_map_reduce.cpp
